--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>안녕하세요. Test test</h1>
-  <p>인 test test</p>
-  <h2>깃허브 테스트 테스트 </h2> 
-  <h3>새로 추가했다 ㅋㅋ</h3>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>안녕하세요. Test test</h1>
+    <p>인 test test</p>
+    <h2>깃허브 테스트 테스트</h2>
+    <h3>새로 추가했다 ㅋㅋ</h3>
+    <h4>또 추가해본다!!</h4>
+  </body>
 </html>
